// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty page 1`] = `
Array [
  <Breadcrumbs />,
  "Title",
  <article
    className="a"
  >
    <div>
      <h1
        className="b"
      >
        <div>
          Empty Name
        </div>
      </h1>
    </div>
    <div />
    <div>
      <div>
        <div />
        <div />
      </div>
      <NoProductsFound />
    </div>
  </article>,
]
`;

exports[`renders the correct tree 1`] = `
Array [
  <Breadcrumbs />,
  "Title",
  <article
    className="a"
  >
    <div>
      <h1
        className="b"
      >
        <div>
          Name
        </div>
      </h1>
    </div>
    <div />
    <div>
      <div>
        <div />
        <div />
      </div>
      <section
        className="c"
      >
        <Gallery
          items={
            Object {
              "id": 1,
            }
          }
        />
      </section>
      <div
        className="d"
      >
        <Pagination
          pageControl={Object {}}
        />
      </div>
    </div>
  </article>,
]
`;
